workstation.yml
# create a deployment for a workstation
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-generator
  namespace: python-app-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: password-generator
  template:
    metadata:
      labels:
        app: password-generator
    spec:
      containers:
        - name: password-generator
          image: my-password-generator:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
        - name: reverse-service
          image: my-reverse-service:latest
          imagePullPolicy: Never
          ports:
             - containerPort: 5001
---
# service type: ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: service-password
  namespace: python-app-ns
spec:
  selector:
    app: password-generator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: service-reverse
  namespace: python-app-ns
spec:
  selector:
    app: password-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
